IC-Prod/objects/CustomState__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>MUST BE ALL CAPS!!  All valid State names, prefixed by Country ISO Codes because there are duplicate state names across multiple countries. Truncate to 36 characters.</description>
    <fields>
        <fullName>CountryName__c</fullName>
        <description>Informational Only</description>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateISOCode__c</fullName>
        <description>ISO Code of this state in this country</description>
        <label>State ISO Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateIntegrationValue__c</fullName>
        <description>Integration uses this value, read from the mirror table.</description>
        <label>State Integration Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <description>Informational only, currently not used</description>
        <label>State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Custom State</label>
</CustomObject>